fix load more btn

--- a/src/templates/picture.hbs
+++ b/src/templates/picture.hbs
@@ -1,6 +1,6 @@
  {{#each this.hits}}
 <div class="photo-card">
-  <img src="{{webformatURL}}" alt="{{tags}}" class="picture" />
+  <img src="{{webformatURL}}" alt="{{tags}}" data-src = {{largeImageURL}} class="picture" />
 
   <div class="stats">
     <p class="stats-item">
